Bug fix for padding of body on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -377,6 +377,7 @@ footer {
 @media screen and (max-width: 37.5em) {
     html, body {
         margin: 0;
+        padding: 0;
     }
     header img {
         height: 40px;
